add Reducer.md to add the demo part

--- a/02.Reducer.md
+++ b/02.Reducer.md
@@ -1,5 +1,4 @@
-﻿
-## Reducer
+﻿## Reducer
 
 Action对象仅仅是描述了行为的相关信息，至于如何通过特定的行为来更新state，就需要看看Reducer了。
 
@@ -94,7 +93,6 @@ Reducer是一个pure function，避免在Reducer中做下面的事情：
 2. 在`default`的情况下返回旧的state
 
 
-
 ### 拆分Reducer
 
 当Reducer函数越来越长的时候，可以把逻辑关系上不太紧密的Action处理逻辑差分到不同的Reducer函数中，例如上面的例子就可以拆分为两个Reducer函数：
@@ -147,3 +145,30 @@ Reducer是一个pure function，避免在Reducer中做下面的事情：
     });
     
     export default taskApp;
+    
+
+### demo    
+
+源文件“02.01.reducer.js”包含了一个简单的Reducer函数的实现    
+通过下面命令可以看到Reducer函数怎么处理特定的action并更新相关的state：
+
+    npm run example "demo/02.01.reducer.js"    
+    
+代码的输出如下：
+
+    -> ADD_TASK Action
+    { taskCategory: 'All',
+      tasks: [ { name: 'Write a blog', category: 'Writing' } ] }
+    -> ADD_TASK Action
+    { taskCategory: 'All',
+      tasks:
+       [ { name: 'Write a blog', category: 'Writing' },
+         { name: 'Read ES6 spec', category: 'Reading' } ] }    
+         
+源文件“02.01.reducer.js”中实现的功能与“02.01.reducer.js”相同，主要就是演示了一下如果拆分Reducer，并通过`combineReducers`函数合并多个子Reducer。
+
+**注意**：拆分后的每个字Reducer只负责state中的一部分数据；每个自Reducer的初始state结构就是它所负责的state的结构。
+
+    npm run example "demo/02.02.combineReducers.js"    
+    
+    
