update Store.md to add the demo part

--- a/03.Store.md
+++ b/03.Store.md
@@ -33,7 +33,7 @@ Store是Redux中数据的统一存储，维护着state的所有内容，所以St
     
 通过代码的运行结果可以看到，Reducer函数会在创建Store对象的时候被调用（即使这个时候没有任何的Action）。
 
-其实在调用`createStore`函数的时候，会通过Reducer函数来设置应用的初始state，同时dispatch一个init action。    
+其实在调用`createStore`函数的时候，会通过Reducer函数来设置应用的初始state，同时dispatch一个init action('@@redux/INIT')。    
 
 
 ### getState和dispatch
@@ -73,4 +73,24 @@ Store是Redux中数据的统一存储，维护着state的所有内容，所以St
     console.log('state after ADD_TASK action:', store.getState());
     
 
+### demo
 
+本文介绍了Store这个核心概念，下面就通过一个例子来看看Store相关的内容。
+
+例子中通过`createStore`创建了一个store对象，然后演示了`getState`，`dispatch`和`subscribe`等方法的使用。
+
+    npm run example "demo/03.store.js"
+
+代码的运行结果如下，从代码中可以看到当调用`createStore`创建Store对象的时候，会出发一个{ type: '@@redux/INIT' } action：
+
+    -> Action Received: { type: '@@redux/INIT' }
+    initial state is: []
+    
+    -> Action Received: { type: 'ADD_TASK', name: 'Read ES6 spec', category: 'Reading' }
+    State change to: [ { name: 'Read ES6 spec', category: 'Reading' } ]
+    
+    -> Action Received: { type: 'ADD_TASK', name: 'Write a blog', category: 'Writing' }
+    State change to: [ { name: 'Read ES6 spec', category: 'Reading' },
+      { name: 'Write a blog', category: 'Writing' } ]    
+      
+      
