update the headers of the md files

--- a/02.Reducer.md
+++ b/02.Reducer.md
@@ -2,7 +2,7 @@
 
 Action对象仅仅是描述了行为的相关信息，至于如何通过特定的行为来更新state，就需要看看Reducer了。
 
-### Reducer简介
+## Reducer简介
 
 关于Reducer，最简单的描述就是:Reducer是一个函数;该函数接收两个参数，一个旧的状态previousState和一个Action对象;返回一个新的状态newState
 
@@ -49,7 +49,7 @@ Reducer是一个pure function，避免在Reducer中做下面的事情：
     };
     
     
-### 处理Action
+## 处理Action
 
 有了state的结构和初始的state之后，就可以开始实现Reducer函数了，Reducer函数的形式通常如下：
 
@@ -93,7 +93,7 @@ Reducer是一个pure function，避免在Reducer中做下面的事情：
 2. 在`default`的情况下返回旧的state
 
 
-### 拆分Reducer
+## 拆分Reducer
 
 当Reducer函数越来越长的时候，可以把逻辑关系上不太紧密的Action处理逻辑差分到不同的Reducer函数中，例如上面的例子就可以拆分为两个Reducer函数：
 
@@ -147,7 +147,7 @@ Reducer是一个pure function，避免在Reducer中做下面的事情：
     export default taskApp;
     
 
-### demo    
+## demo    
 
 源文件“02.01.reducer.js”包含了一个简单的Reducer函数的实现    
 通过下面命令可以看到Reducer函数怎么处理特定的action并更新相关的state：
