--- a/03.Store.md
+++ b/03.Store.md
@@ -17,7 +17,7 @@ Store是Redux中数据的统一存储，维护着state的所有内容，所以St
 2. 根据Action对象的type和数据信息，Store对象可以通过Reducer函数来更新state的内容
 
 
-### 创建Store对象
+## 创建Store对象
 
 在Redux中，可以通过`createStore`函数来创建Store对象，`createStore`函数的参数就是Reducer函数。
 
@@ -36,7 +36,7 @@ Store是Redux中数据的统一存储，维护着state的所有内容，所以St
 其实在调用`createStore`函数的时候，会通过Reducer函数来设置应用的初始state，同时dispatch一个init action('@@redux/INIT')。    
 
 
-### getState和dispatch
+## getState和dispatch
 
 根据前面的介绍Store对象提供了一下方法让我们获取和更新state，继续上面的例子，可以通过`getState`方法来获得当前的state：
 
@@ -73,7 +73,7 @@ Store是Redux中数据的统一存储，维护着state的所有内容，所以St
     console.log('state after ADD_TASK action:', store.getState());
     
 
-### demo
+## demo
 
 本文介绍了Store这个核心概念，下面就通过一个例子来看看Store相关的内容。
 
