--- a/04.Redux-data-flow.md
+++ b/04.Redux-data-flow.md
@@ -19,7 +19,7 @@ Redux中数据流的lifecycle有4步：
 ![Redux data flow](https://raw.githubusercontent.com/WilberTian/StepByStep-Redux/master/images/redux-(action-reducer-store).png)
 
 
-### demo
+## demo
 
 通过前面几篇的介绍了解了Redux中的核心概念Action、Reducer和Store，下面例子中就把这几个概念组合起来，看看Redux数据流：
 
