--- a/04.Redux-data-flow.md
+++ b/04.Redux-data-flow.md
@@ -3,7 +3,7 @@
 通过前面的介绍，我们了解到了Redux中的三个核心概念：Action、Reducer和Store。
 
 本篇文章就结合前面介绍的三个核心概念来看看Redux的数据流。Redux架构始终是在围绕着”strict unidirectional data flow”这个概念的。       
-这个概念意味着application中所有的data都遵循同一个lifecycle pattern，这使得我们app的变得更predictable并且提高代码的可读性。    
+这个概念意味着application中所有的data都遵循同一个lifecycle pattern，这使得应用变得更predictable并且提高代码的可读性。    
 
 Redux还推崇将data进行[normalization](https://github.com/gaearon/normalizr)，这样就不会出现那种同一份数据有多份独立的拷贝，并且这些拷贝相互无法引用的情况。
      
