update 05.Middleware (part 2).md

--- a/05.Middleware (part 2).md
+++ b/05.Middleware (part 2).md
@@ -50,7 +50,8 @@
 
 通过上面Monkey patch的方式，可以直接给`store.dispatch`方法增加新的功能。
 
-但是，假如现在有一个新的功能，需要在action执行之后获取state的信息；也就是说，需要对`store.dispatch`方法进行多次Monkey patch。   
+但是，假如现在有一个新的功能，需要在action执行之后获取state的信息；也就是说，需要对`store.dispatch`方法进行多次Monkey patch，那么就需要对`store.dispatch`方法进行多次处理了。  
+ 
 例如，下面代码中的两个函数就分别对`store.dispatch`方法进行Monkey patch来重新实现`store.dispatch`方法：
 
     function patchStoreToLogAction(store) {
@@ -108,7 +109,7 @@
         }   
     }
 
-这样，对于Monkey patch函数的调用，可以抽象出一个函数进行统一的处理，这里就有了`applyMiddlewareByMonkeypatching`这个函数。
+这样，对于Monkey patch的处理过程，可以抽象出一个函数进行统一的处理，这里就有了`applyMiddlewareByMonkeypatching`这个函数。
 
     function applyMiddlewareByMonkeypatching(store, middlewares) {
         middlewares = middlewares.slice();
@@ -128,7 +129,7 @@
 
 ## 移除Monkey patch
 
-在上面`applyMiddlewareByMonkeypatching`函数的实现中有以下代码片段，达到的效果就是**每一个 Middleware 都可以操作（或者直接调用）前一个 middleware 包装过的 store.dispatch方法**。
+在上面`applyMiddlewareByMonkeypatching`函数的实现中有以下代码片段，达到的效果就是**每一个Middleware都可以操作（或者直接调用）前一个Middleware包装过的`store.dispatch`方法**。
 
 这样所有的Middleware就串联起来了，也就是实现了Middleware的**链式组合**能力。
 
@@ -137,11 +138,9 @@
     );
 
     
-但是，如果 applyMiddlewareByMonkeypatching 方法中没有在第一个 Middleware 执行时立即替换掉 store.dispatch方法，那么 store.dispatch 将会一直指向原始的 dispatch 方法。
+但是，如果`applyMiddlewareByMonkeypatching`方法中没有在第一个Middleware执行时立即替换掉`store.dispatch`方法，那么`store.dispatch`将会一直指向原始的dispatch方法。
 
-也就是说，第二个 middleware 依旧会作用在原始的 dispatch 方法。  
-
-所以，可以通过另一种方式来实现这种链式调用的效果，让 Middleware 以参数的形式接收一个 next() 方法，而不是通过 store 的实例去获取。  
+所以，可以通过另一种方式来实现这种链式调用的效果，让Middleware以参数的形式接收一个`next()`方法，而不是通过store的实例去获取：
     
     function logAction(store) {
         return function wrapDispatchAndLogAction(next){
@@ -161,7 +160,7 @@
         return result;
     }
     
-由于Middleware的这种变化（支持以参数的形式传递next()方法），`applyMiddlewareByMonkeypatching`函数也变成了下面的实现`applyMiddleware`。   
+由于Middleware的这种变化（支持以参数的形式传递`next()`方法），`applyMiddlewareByMonkeypatching`函数也变成了下面的实现`applyMiddleware`。   
 *注意：下面`applyMiddleware`的实现只是模拟Redux中的`applyMiddleware`*
 
     function applyMiddleware(store, middlewares) {
@@ -181,8 +180,8 @@
     
 通过上面的一步步实现，相信现在就了解了Redux middleware的模式：
 
-- Middleware接收了一个next()的dispatch函数，并返回一个包装后的dispatch函数
-- 返回的包装后的dispatch函数会被作为下一个Middleware的next()，以此类推
+- Middleware接收了一个`next()`的dispatch函数，并返回一个包装后的dispatch函数
+- 返回的包装后的dispatch函数会被作为下一个Middleware的`next()`，以此类推
 
 为了进一步理解上面关于Redux middleware模式的描述，可以运行下面的命令：
 
